crates/alder-parse/src/snapshots/alder_parse__query__tests__select_limit_offset.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users limit 10 offset 20 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 49,
        },
    },
    value: Query(
        Select(
            Select {
                projection: Star(
                    Region {
                        start: Position {
                            line: 1,
                            column: 16,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                ),
                from: TableRef {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 23,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                        value: "users",
                    },
                    alias: None,
                },
                joins: [],
                where_: None,
                group_by: [],
                order_by: [],
                limit: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 35,
                            },
                            end: Position {
                                line: 1,
                                column: 37,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 10.0,
                                text: "10",
                            },
                        ),
                    },
                ),
                offset: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 45,
                            },
                            end: Position {
                                line: 1,
                                column: 47,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 20.0,
                                text: "20",
                            },
                        ),
                    },
                ),
            },
        ),
    ),
}
